force-app/main/default/objects/TimeandExpenseDetails__c/TimeandExpenseDetails__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Time and Expense Details</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time and Expenses Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>