force-app/main/default/objects/TimeandExpenseDetails__c/fields/ExpenseAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpenseAmount__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>