force-app/main/default/objects/TimeandExpenseDetails__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>