force-app/main/default/objects/TimeandExpenseDetails__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3702 - Postage</fullName>
            </value>
            <value>
                <fullName>4009 - Publication (service of pleading) – Bid list not available</fullName>
            </value>
            <value>
                <fullName>4089 - Publication (service of pleading) – Bid list available</fullName>
            </value>
            <value>
                <fullName>4101 - Mileage (staff only)</fullName>
            </value>
            <value>
                <fullName>4104 - Parking (staff only)</fullName>
            </value>
            <value>
                <fullName>4201 - Airfare (witness appearance and/or staff, intra-state)</fullName>
            </value>
            <value>
                <fullName>4201 - Taxi (witness appearance and/or staff)</fullName>
            </value>
            <value>
                <fullName>4301 - Per Diem (staff only, inter-state only)</fullName>
            </value>
            <value>
                <fullName>4302 - Airport Parking (staff only)</fullName>
            </value>
            <value>
                <fullName>4315 - Meals only (same day travel, inter-state)</fullName>
            </value>
            <value>
                <fullName>4601 - Car Rental (staff only, inter-state)</fullName>
            </value>
            <value>
                <fullName>7102 - Process Server</fullName>
            </value>
            <value>
                <fullName>7102 - Subpoena – Research Fees</fullName>
            </value>
            <value>
                <fullName>7104 - Court Reporters</fullName>
            </value>
            <value>
                <fullName>7204 - Subpoena – Photo Copies of Documents</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>