force-app/main/default/objects/TimeandExpenseDetails__c/fields/TimeandExpenseHeader__c.field-meta.xml
<CustomField>
    <fullName>TimeandExpenseHeader__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Time and Expense Header</label>
    <referenceTo>TimeandExpenseHeader__c</referenceTo>
    <relationshipLabel>Time and Expenses Details</relationshipLabel>
    <relationshipName>TimeandExpenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>