force-app/main/default/objects/TimeandExpenseDetails__c/recordTypes/Expense.recordType-meta.xml
<RecordType>
    <fullName>Expense</fullName>
    <active>true</active>
    <description>PacPoint-MV010319 - Created for BREG phase 1</description>
    <label>Expense</label>
</RecordType>