force-app/main/default/objects/TimeandExpenseDetails__c/recordTypes/Time.recordType-meta.xml
<RecordType>
    <fullName>Time</fullName>
    <active>true</active>
    <description>PacPoint-MV010319 - Created for BREG phase 1</description>
    <label>Time</label>
</RecordType>